--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,7 @@
+# set shell
+set -g default-command /usr/bin/zsh
+
+
 # 0 is too far from ` ;)
 set -g base-index 1
 
@@ -18,8 +22,11 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 setw -g monitor-activity on
 
-bind-key v split-window -h
-bind-key s split-window -v
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -33,13 +40,13 @@ bind-key M-l resize-pane -R
 
 # Vim style pane selection
 bind h select-pane -L
-bind j select-pane -D
+bind j select-pane -D 
 bind k select-pane -U
 bind l select-pane -R
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
-bind -n M-j select-pane -D
+bind -n M-j select-pane -D 
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
