--- a/git/hooks/.pre-commit-config.yaml
+++ b/git/hooks/.pre-commit-config.yaml
@@ -1,14 +1,25 @@
 repos:
 -   repo: https://github.com/pycqa/flake8
-    rev: 3.7.9
+    rev: 6.0.0
     hooks:
     - id: flake8
 -   repo: https://github.com/ambv/black
-    rev: 19.10b0
+    rev: 23.3.0
     hooks:
     - id: black
-      language_version: python3.
+      language_version: python3.7
 -   repo: https://github.com/timothycrosley/isort
-    rev: 4.3.21  # pick the isort version you'd like to use from https://github.com/timothycrosley/isort/releases
+    rev: 5.12.0  # pick the isort version you'd like to use from https://github.com/timothycrosley/isort/releases
     hooks:
     -   id: isort
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0  # Use the ref you want to point at
+    hooks:
+    -   id: trailing-whitespace
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: debug-statements
+    -   id: double-quote-string-fixer
+    -   id: name-tests-test
+    -   id: requirements-txt-fixer
+    -   id: check-merge-conflict
